created main class and Redis Layer. Working with CityCountry adn Language classes